# Avrio

./: .coveralls.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md
scripts/: makeTx.py
src/: config.h  version.h.in
src/chains/: chain.cpp  chain.h
src/core/: Currency.cpp  account.cpp  block.h  blockchain.cpp  blockchain.h  certificate.cpp  core.cpp  functions.cpp  transaction.cpp  txmempool.cpp
src/daemon/: daemon.cpp  main.cpp
src/database/: flush.cpp  lmdb++.h  main.cpp  storage.cpp  storage.h
src/logger/: logger.cpp  logger.h
src/p2p/: p2p.cpp  peerlist.cpp
src/wallet/: keygen.cpp  wallet.cpp  wallet.h
